# playoff

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
client/networking/: Chat.cpp  Chat.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h
client/resources/: main.qrc
client/ui/: ChannelTab.ui  ConnectDialog.cpp  ConnectDialog.h  ConnectDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
common/: CMakeLists.txt  Serialization.h
common/model/: Event.cpp  Event.h  Invitation.cpp  Invitation.h  Message.cpp  Message.h  Room.cpp  Room.h  Update.cpp  Update.h  UpdateRequest.cpp  UpdateRequest.h  User.cpp  User.h
packaging/: CMakeLists.txt
server/: CMakeLists.txt  Chat.cpp  Chat.h  ChatSession.cpp  ChatSession.h  Server.cpp  Server.h  main.cpp
test/: CMakeLists.txt  main.cpp
test/common/: InvitationModelTest.cpp  MessageModelTest.cpp  RoomModelTest.cpp  UserModelTest.cpp
